changes template file

--- a/template/index.html
+++ b/template/index.html
@@ -220,43 +220,115 @@ Author URL: http://w3layouts.com
         </div>
     </div>
 </section>
-<section class="w3l-feature-3" style="margin-top: 150px;">
-    <div class="grid top-bottom mb-lg-5 pb-lg-5">
+<!--  form-12 -->
+<section class="w3l-form-12">
+    <div class="form-12-content" id="services">
         <div class="container">
+            <div class="grid grid-column-3 py-md-5">
 
-            <div class="middle-section grid-column text-center">
-                <div class="three-grids-columns">
-                    <span class="fa fa-laptop"></span>
-                    <h4>Logical Understanding</h4>
-                    <p class="text-justify">While a child visualize the questions on the imaginary abacus after
-                        listening to it, they have to
-                        apply logic to do the proper movement of beads in the mind. This ability also helps the kids to
-                        apply logics in various situations and even in real-life scenarios.</p>
-                    <a class="btn btn-secondary btn-theme3 mt-4" href="services.html">Read More </a>
-                </div>
-                <div class="three-grids-columns">
-                    <span class="fa fa-users"></span>
-                    <h4>Concentration</h4>
-                    <p class="text-justify">For every question to be answered correctly, children have to listen to the
-                        sum that is being read and concentrate on it so as to visualize it in their mind. This becomes a
-                        habit when exercised regularly throughout the abacus training for a period of 2 and half years.
-                        It applies to all subjects by imbibing better listening skills.
+                <div class="column2">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6 col-6">
+                            <a href="services.html">
+                                <div class="courses-item text-white">
+                                    <span class="fa fa-laptop"></span>
+                                    <h5>Logical Understanding</h5>
+                                    <p class="text-left">While a child visualize the questions on the imaginary abacus
+                                        after listening
+                                        to it, they have to apply logic to do the proper movement of beads in the mind.
+                                        This ability also helps the kids to apply logics in various situations and even
+                                        in real-life scenarios.
 
-                    </p>
-                    <a class="btn btn-secondary btn-theme3 mt-4" href="services.html">Read More </a>
-                </div>
-                <div class="three-grids-columns">
-                    <span class="fa fa-book"></span>
-                    <h4>Builds a Photographic Memory</h4>
-                    <p class="text-justify">When the beads movement is done in the mind, children pictures the position of the beads displayed in their mind. Unless the picture is created they would not be able to answer the question that was asked. Photographic memory enables a student capture the images or instances as it is in their memory.
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-6">
+                            <a href="services.html">
+                                <div class="courses-item text-white">
+                                    <span class="fa fa-laptop"></span>
+                                    <h5>Concentration</h5>
+                                    <p class="text-left">For every question to be answered correctly, children have to
+                                        listen to the sum that is being read and concentrate on it so as to visualize it
+                                        in their mind. This becomes a habit when exercised regularly throughout the
+                                        abacus training for a period of 2 and half years. It applies to all subjects by
+                                        imbibing better listening skills.
 
-                    </p>
-                    <a class="btn btn-secondary btn-theme3 mt-4" href="services.html">Read More </a>
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="row mt-4">
+                        <div class="col-md-6 col-sm-6 col-6">
+                            <a href="services.html">
+                                <div class="courses-item text-white">
+                                    <span class="fa fa-laptop"></span>
+                                    <h5>Builds a Photographic Memory</h5>
+                                    <p class="text-left">When the beads movement is done in the mind, children pictures
+                                        the position of the beads displayed in their mind. Unless the picture is created
+                                        they would not be able to answer the question that was asked. Photographic
+                                        memory enables a student capture the images or instances as it is in their
+                                        memory.
+
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-6">
+                            <a href="services.html">
+                                <div class="courses-item text-white">
+                                    <span class="fa fa-laptop"></span>
+                                    <h5>Enhances Visualization</h5>
+                                    <p class="text-left">When the beads movement is done in the mind, children pictures
+                                        the position of the beads displayed in their mind. Unless the picture is created
+                                        they would not be able to answer the question that was asked. Photographic
+                                        memory enables a student capture the images or instances as it is in their
+                                        memory.</p>
+                                </div>
+                            </a>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    </div>
 </section>
+<!-- // form-12 -->
+<!--counter section start-->
+<!-- specifications -->
+<section class="w3l-index2">
+    <div class="main-w3 py-5" id="stats">
+        <div class="container py-lg-3">
+            <div class="row main-cont-wthree-fea">
+                <div class="col-lg-3 col-sm-6">
+                    <h3 class="title-spe">15</h3>
+                    <sub>COUNTRIES</sub>
+                </div>
+                <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4">
+                    <h3 class="title-spe">3000</h3>
+                    <sub> CENTERS</sub>
+                </div>
+                <div class="col-lg-3 col-sm-6  mt-lg-0 mt-4">
+                    <h3 class="title-spe">10000</h3>
+                    <sub>INSTRUCTORS</sub>
+                </div>
+                <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
+
+                    <h3 class="title-spe">500000</h3>
+                    <sub>STUDENTS</sub>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- //specifications -->
+</section>
+<!--counter section end-->
 
 <!-- features-4 block -->
 <section class="w3l-index1" id="about">
@@ -305,182 +377,6 @@ Author URL: http://w3layouts.com
     </div>
 </section>
 
-<!--  form-12 -->
-<section class="w3l-form-12">
-    <div class="form-12-content py-5" id="services">
-        <div class="container py-md-3">
-            <div class="grid grid-column-2 py-md-5">
-
-                <div class="column1">
-                    <h4 class="tagline">Find your course</h4>
-                    <p>Fill in below form to find your courses</p>
-                    <form action="/" method="Get">
-                        <div class="">
-                            <input class="form-input" name="name" placeholder="Course Name" type="text">
-                        </div>
-                        <div class="">
-                            <select id="sel1">
-                                <option>Category</option>
-                                <option>Computer</option>
-                                <option>Science</option>
-                                <option>History</option>
-                                <option>Economics</option>
-                            </select>
-                        </div>
-
-
-                        <button class="btn btn-secondary btn-theme2" type="submit">Submit</button>
-                    </form>
-                </div>
-                <div class="column2">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6 col-6">
-                            <a href="services.html">
-                                <div class="courses-item">
-                                    <span class="fa fa-male"></span>
-                                    <p>Socioligy</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 col-6">
-                            <a href="services.html">
-                                <div class="courses-item">
-                                    <span class="fa fa-suitcase"></span>
-                                    <p>Business</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 col-6 mt-md-0 mt-4">
-                            <a href="services.html">
-                                <div class="courses-item">
-                                    <span class="fa fa-code"></span>
-                                    <p>Web Dev</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 col-6 mt-md-0 mt-4">
-                            <a href="services.html">
-                                <div class="courses-item">
-                                    <span class="fa fa-flask"></span>
-                                    <p>Science</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 col-6 mt-4">
-                            <a href="services.html">
-                                <div class="courses-item mt-2">
-                                    <span class="fa fa-money"></span>
-                                    <p>Ecomomics</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 col-6 mt-4">
-                            <a href="services.html">
-                                <div class="courses-item mt-2">
-                                    <span class="fa fa-gg"></span>
-                                    <p>Biology</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 col-6 mt-4">
-                            <a href="services.html">
-                                <div class="courses-item mt-2">
-                                    <span class="fa fa-desktop"></span>
-                                    <p>Computing</p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 col-6 mt-4">
-                            <a href="services.html">
-                                <div class="courses-item mt-2">
-                                    <span class="fa fa-mouse-pointer"></span>
-                                    <p>Web Design</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- // form-12 -->
-
-
-<!-- specifications -->
-<section class="w3l-index2">
-    <div class="main-w3 py-5" id="stats">
-        <div class="container py-lg-3">
-            <div class="row main-cont-wthree-fea">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="grids-speci1">
-                        <h3 class="title-spe">60</h3>
-                        <p>PROFESSIONAL <br>INSTRUCTORS</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4">
-                    <div class="grids-speci1">
-                        <h3 class="title-spe">18</h3>
-                        <p> NEW COURSES <br>EVERY YEAR</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6  mt-lg-0 mt-4">
-                    <div class="grids-speci1">
-                        <h3 class="title-spe">34</h3>
-                        <p>LIVE SESSIONS <br>EVERY MONTH</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
-                    <div class="grids-speci1">
-                        <h3 class="title-spe">20</h3>
-                        <p>REGISTERED <br>STUDENTS</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <!-- //specifications -->
-</section>
-<!-- customers4 block -->
-<section class="w3l-customers-4" id="testimonials">
-    <div class="py-5" id="customers4-block">
-        <div class="container py-md-3">
-
-            <div class="section-title align-center row">
-                <div class="item-top col-md-6 pr-md-5">
-                    <div class="heading">
-                        <h3 class="head text-white">Hear what our students have to say</h3>
-                        <p class="my-3 head text-white">Magna aliqua. Ut enim ad minim veniam, quis nostrud.Lorem ipsum
-                            dolor sit amet, consectetur adipisicingelit, Vestibulum ante ipsum primis in faucibus orci
-                            luctus et ultrices posuere cubilia Curae;
-                            Nulla mollis dapibus nunc, ut rhoncus
-                            turpis sodales quis. Integer sit amet mattis quam.</p>
-                        <p class="my-3 head text-white"> Vestibulum ante ipsum primis in faucibus orci luctus et
-                            ultrices posuere cubilia Curae;
-                            Nulla mollis dapibus nunc, ut rhoncus
-                            turpis sodales quis. Integer sit amet mattis quam.</p>
-                    </div>
-                </div>
-                <div class="item-top col-md-6 mt-md-0 mt-4">
-                    <div class="item text-center">
-                        <div class="imgTitle">
-                            <img alt="" class="img-responsive" src="assets/images/c3.jpg"/>
-                        </div>
-                        <h6 class="mt-3">Jessey Rosey</h6>
-                        <p class="">Student</p>
-                        <p> Magna aliqua. Ut enim ad minim veniam, quis nostrud.Lorem ipsum dolor sit amet, consectetur
-                            adipisicingelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                            ad minim veniam, quis nostrud.</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-</section>
 <section class="w3l-price-2" id="news">
     <div class="price-main py-5">
         <div class="container py-md-3">
