--- a/template/index.html
+++ b/template/index.html
@@ -300,7 +300,7 @@ Author URL: http://w3layouts.com
 <!-- // form-12 -->
 <!--counter section start-->
 <!-- specifications -->
-<section class="w3l-index2">
+<section class="w3l-index2" style="background-image: url(assets/images/counter-banner.png)">
     <div class="main-w3 py-5" id="stats">
         <div class="container py-lg-3">
             <div class="row main-cont-wthree-fea">
@@ -317,10 +317,8 @@ Author URL: http://w3layouts.com
                     <sub>INSTRUCTORS</sub>
                 </div>
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
-
                     <h3 class="title-spe">500000</h3>
                     <sub>STUDENTS</sub>
-
                 </div>
             </div>
 
@@ -334,21 +332,44 @@ Author URL: http://w3layouts.com
 <section class="w3l-index1" id="about">
     <div class="calltoaction-20  py-5 editContent">
         <div class="container py-md-3">
-
             <div class="calltoaction-20-content row">
-                <div class="column center-align-self col-lg-6 pr-lg-5">
-                    <h2 class="editContent">Welcome To Our Campus</h2>
-                    <p class="more-gap editContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                        architecto, ex veritatis tempora aliquid labore natus autem iusto magni dicta incidunt nostrum
-                        odit veniam voluptas provident minus saepe reiciendis nulla dolore delectus molestias</p>
-                    <p class="more-gap editContent">Numquam
-                        architecto, ex veritatis tempora aliquid labore natus autem iusto magni dicta incidunt nostrum
-                        odit veniam voluptas provident </p>
-                    <a class="btn btn-secondary btn-theme2 mt-3" href="about.html"> Read More</a>
+
+                <div class="col-lg-12">
+                    <h2 class="text-center">ABOUT COURSE</h2>
+                    <h4 class="mt-4">What is Abacus ?</h4>
+                    <p class="">Abacus is an instrument that was invented some 2500 years ago primarily in China, which
+                        later on spread through countries like Korea, Japan, Taiwan, Malaysia etc. It was used in the
+                        ancient times for calculating numbers through basic arithmetic system. It has now been proven as
+                        a complete brain development tool over last two decades.
+                    </p>
+                    <p>Abacus became popular over the world after being transformed from a calculating instrument into a
+                        system having immense power to benefit children of small ages by expanding the brain usage, in
+                        addition to making maths learning easy and effective.
+
+                    </p>
+
+                    <img alt="" class="img-responsive img-fluid" src="assets/images/what-is-abacus.jpg">
                 </div>
-                <div class="column ccont-left col-lg-6">
-                    <img alt="" class="img-responsive" src="assets/images/g1.jpg">
+
+                <div class="col-lg-12">
+                    <h4 class="mt-4">Getting Friendly with Abacus:</h4>
+                    <small>The image displayed is that of a structure of an abacus</small>
+                    <img alt="" class="img-responsive img-fluid" src="assets/images/AboutAbacus.jpg" style="margin: 0 auto">
+                    <h4 class="mt-4">What is Abacus ?</h4>
+                    <p class="">Abacus is an instrument that was invented some 2500 years ago primarily in China, which
+                        later on spread through countries like Korea, Japan, Taiwan, Malaysia etc. It was used in the
+                        ancient times for calculating numbers through basic arithmetic system. It has now been proven as
+                        a complete brain development tool over last two decades.
+                    </p>
+                    <p>Abacus became popular over the world after being transformed from a calculating instrument into a
+                        system having immense power to benefit children of small ages by expanding the brain usage, in
+                        addition to making maths learning easy and effective.
+
+                    </p>
+
+
                 </div>
+
             </div>
         </div>
     </div>
