--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -10,3 +10,12 @@
     info@mastermindabacusbd.com
 =========================================================================
  */
+.w3l-index1 li {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 10px;
+    list-style: upper-latin;
+    text-transform: uppercase;
+    border: 1px solid #0d2147;
+    padding: 10px;
+}
