--- a/template/program-overview.html
+++ b/template/program-overview.html
@@ -64,9 +64,9 @@ Author URL: http://w3layouts.com
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="program-overview.html">PROGRAMME OVERVIEW</a>
+                        <a class="nav-link" href="about.html">PROGRAMME OVERVIEW</a>
                     </li>
-
+                   
                     <li class="nav-item">
                         <a class="nav-link" href="services.html">Services</a>
                     </li>
