--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -19,3 +19,18 @@
     border: 1px solid #0d2147;
     padding: 10px;
 }
+
+table#courseStructureTable {
+
+}
+
+table#courseStructureTable tr th,
+table#courseStructureTable tr td {
+    padding: 8px;
+}
+
+.navbar-brand img {
+    vertical-align: middle;
+    border-style: none;
+    width: 100px;
+}
