--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en">
 <head>
@@ -20,7 +16,7 @@ Author URL: http://w3layouts.com
     <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
-<body>
+<body >
 
 
 <!-- Top Menu 1 -->
@@ -44,7 +40,7 @@ Author URL: http://w3layouts.com
 <section class="w3l-bootstrap-header">
     <nav class="navbar navbar-expand-lg navbar-light py-lg-2 py-2">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><span class="fa fa-pencil-square-o "></span> Mastery</a>
+            <a class="navbar-brand" href="index.html"> <img src="assets/images/logo.png" alt="mastermind abacus school logo" ></a>
             <!-- if logo is image enable this
           <a class="navbar-brand" href="#index.html">
               <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
@@ -58,7 +54,7 @@ Author URL: http://w3layouts.com
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -66,22 +62,18 @@ Author URL: http://w3layouts.com
                     <li class="nav-item">
                         <a class="nav-link" href="program-overview.html">PROGRAMME OVERVIEW</a>
                     </li>
-
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
+                        <a class="nav-link" href="program-overview.html#faq-section">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admission.html">Admission</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
-                <form action="search-results.html" class="form-inline position-relative my-2 my-lg-0">
-                    <input aria-label="Search" class="form-control search" placeholder="Search here..." required=""
-                           type="search">
-                    <button class="btn btn-search position-absolute" type="submit"><span aria-hidden="true"
-                                                                                         class="fa fa-search"></span>
-                    </button>
-                </form>
+
             </div>
         </div>
     </nav>
@@ -160,38 +152,7 @@ Author URL: http://w3layouts.com
 
     <script src="assets/js/owl.carousel.js"></script>
     <!-- script for -->
-    <script>
-        $(document).ready(function () {
-            $('.owl-one').owlCarousel({
-                loop: true,
-                margin: 0,
-                nav: false,
-                responsiveClass: true,
-                autoplay: false,
-                autoplayTimeout: 5000,
-                autoplaySpeed: 1000,
-                autoplayHoverPause: false,
-                responsive: {
-                    0: {
-                        items: 1,
-                        nav: false
-                    },
-                    480: {
-                        items: 1,
-                        nav: false
-                    },
-                    667: {
-                        items: 1,
-                        nav: true
-                    },
-                    1000: {
-                        items: 1,
-                        nav: true
-                    }
-                }
-            })
-        })
-    </script>
+
     <!-- //script -->
     <!-- /main-slider -->
 </section>
@@ -338,7 +299,7 @@ Author URL: http://w3layouts.com
             <div class="calltoaction-20-content row">
 
                 <div class="col-lg-12">
-                    <h2 class="text-center">ABOUT COURSE</h2>
+                    <h2 class="text-center" id="about-course">ABOUT COURSE</h2>
                     <h4 class="mt-4">What is Abacus ?</h4>
                     <p class="">Abacus is an instrument that was invented some 2500 years ago primarily in China, which
                         later on spread through countries like Korea, Japan, Taiwan, Malaysia etc. It was used in the
@@ -498,8 +459,8 @@ Author URL: http://w3layouts.com
 
                 <div class="column1">
                     <div class="heading">
-                        <h3 class="head text-white">Apply for Scholarship</h3>
-                        <h4>Fall 2019 applications are now open</h4>
+                        <h3 class="head text-white">Are you interested ?</h3>
+                        <h4>Admission is now open now open</h4>
                         <p class="my-3 text-white"> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
                             posuere cubilia Curae;
                             Nulla mollis dapibus nunc, ut rhoncus
@@ -507,14 +468,14 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="column2">
-                    <a class="btn btn-secondary btn-theme2 mt-3" href="contact.html"> Apply Here</a>
+                    <a class="btn btn-secondary btn-theme2 mt-3" href="admission.html"> Apply Here</a>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="w3l-price-2" id="news">
+<section class="w3l-price-2" id="news" style="display: none;">
     <div class="price-main py-5">
         <div class="container py-md-3">
             <div class="pricing-style-w3ls row py-md-5">
@@ -629,11 +590,11 @@ Author URL: http://w3layouts.com
                 <div class="footer-list-29 footer-1">
                     <h6 class="footer-title-29">Contact Us</h6>
                     <ul>
-                        <li><p><span class="fa fa-map-marker"></span> Estate Business, #32841 block, #221DRS Real estate
-                            business building, UK.</p></li>
-                        <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
+                        <li><p><span class="fa fa-map-marker"></span> House # 40, Road # 07, Sector # 13, Uttara</p>
+                        </li>
+                        <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> 01865-598364</a></li>
                         <li><a class="mail" href="mailto:corporate-mail@support.com"><span
-                                class="fa fa-envelope-open-o"></span> corporate-mail@support.com</a></li>
+                                class="fa fa-envelope-open-o"></span> info@mastermindabacusbd.com</a></li>
                     </ul>
                     <div class="main-social-footer-29">
                         <a class="facebook" href="#facebook"><span class="fa fa-facebook"></span></a>
@@ -668,16 +629,14 @@ Author URL: http://w3layouts.com
                     <ul>
                         <h6 class="footer-title-29">Quick Links</h6>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="#about-course">About</a></li>
                         <li><a href="#"> Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
             <div class="d-grid grid-col-2 bottom-copies">
-                <p class="copy-footer-29">© 2020 Mastery. All rights reserved | Designed by <a
-                        href="https://w3layouts.com">W3layouts</a></p>
+                <p class="copy-footer-29">© 2020 All rights reserved | Test</p>
                 <ul class="list-btm-29">
                     <li><a href="#link">Privacy policy</a></li>
                     <li><a href="#link">Terms of service</a></li>
@@ -686,8 +645,10 @@ Author URL: http://w3layouts.com
             </div>
         </div>
     </div>
+
     <!-- move top -->
     <button id="movetop" onclick="topFunction()" title="Go to top">
+
         <span class="fa fa-angle-up"></span>
     </button>
     <script>
@@ -728,6 +689,12 @@ Author URL: http://w3layouts.com
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+</script>
+<script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+<script>
+    var scroll = new SmoothScroll('a[href*="#"]', {
+        speed: 200
+    });
 </script>
 `
 
