--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,7 @@
           rel="stylesheet">
     <!-- //web fonts -->
     <!-- Template CSS -->
-    <link rel="shortcut icon" href="assets/frontend/images/favi.png">
+    <link rel="shortcut icon" href="assets/images/favicon.png">
     <link href="assets/css/style-starter.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 
