change favicon url

--- a/template/services.html
+++ b/template/services.html
@@ -15,7 +15,7 @@ Author URL: http://w3layouts.com
           rel="stylesheet">
     <!-- //web fonts -->
     <!-- Template CSS -->
-    <link rel="shortcut icon" href="/assets/frontend/images/favi.png">
+    <link rel="shortcut icon" href="/assets/images/favicon.png">
     <link href="assets/css/style-starter.css" rel="stylesheet">
 </head>
 <body>
