--- a/template/about.html
+++ b/template/about.html
@@ -383,21 +383,19 @@
                                 class="fa fa-envelope-open-o"></span> info@mastermindabacusbd.com</a></li>
                     </ul>
                     <div class="main-social-footer-29">
-                        <a class="facebook" href="#facebook"><span class="fa fa-facebook"></span></a>
-                        <a class="twitter" href="#twitter"><span class="fa fa-twitter"></span></a>
+                        <a target="_blank" class="facebook" href="https://www.facebook.com/mastermindabacusbd/"><span class="fa fa-facebook"></span></a>
+                        <a target="_blank" class="twitter" href="https://twitter.com/mastermind_bd?lang=en"><span class="fa fa-twitter"></span></a>
                         <a class="instagram" href="#instagram"><span class="fa fa-instagram"></span></a>
-                        <a class="google-plus" href="#google-plus"><span class="fa fa-google-plus"></span></a>
-                        <a class="linkedin" href="#linkedin"><span class="fa fa-linkedin"></span></a>
+                        <a target="_blank" class="linkedin" href="https://bd.linkedin.com/company/mastermindabacusbd"><span class="fa fa-linkedin"></span></a>
                     </div>
                 </div>
                 <div class="footer-list-29 footer-2">
                     <ul>
                         <h6 class="footer-title-29">Featured Links</h6>
-                        <li><a href="contact.html">Graduation</a></li>
-                        <li><a href="contact.html">Admissions</a></li>
-                        <li><a href="contact.html">Book Store</a></li>
-                        <li><a href="contact.html">International</a></li>
-                        <li><a href="contact.html">Courses</a></li>
+                        <li><a href="admin-login">Admin Login</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="faq.html">Faq</a></li>
+                        <li><a href="https://mastermindabacusbd.com/gurdian-login">Guardian Login</a></li>
                     </ul>
                 </div>
                 <div class="footer-list-29 footer-3">
@@ -414,16 +412,16 @@
                 <div class="footer-list-29 footer-4">
                     <ul>
                         <h6 class="footer-title-29">Quick Links</h6>
+                        <li><a href="admission.html">Admission</a></li>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#about-course">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="#"> Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
             <div class="d-grid grid-col-2 bottom-copies">
-                <p class="copy-footer-29">© 2020 All rights reserved | Test</p>
+                <p class="copy-footer-29">© 2020 All rights reserved | Mastermindabacusbd.com</p>
                 <ul class="list-btm-29">
                     <li><a href="#link">Privacy policy</a></li>
                     <li><a href="#link">Terms of service</a></li>
