--- a/template/index.html
+++ b/template/index.html
@@ -16,7 +16,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
-<body >
+<body>
 
 
 <!-- Top Menu 1 -->
@@ -40,7 +40,8 @@
 <section class="w3l-bootstrap-header">
     <nav class="navbar navbar-expand-lg navbar-light py-lg-2 py-2">
         <div class="container">
-            <a class="navbar-brand" href="index.html"> <img src="assets/images/logo.png" alt="mastermind abacus school logo" ></a>
+            <a class="navbar-brand" href="index.html"> <img src="assets/images/logo.png"
+                                                            alt="mastermind abacus school logo"></a>
             <!-- if logo is image enable this
           <a class="navbar-brand" href="#index.html">
               <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
@@ -393,25 +394,25 @@
                         more than 2000+ Abacus franchise...Read On!
                     </p>
                     <p>
-                            Master Mind has a global presence with more than 2000+ Abacus franchise in India and abroad.
+                        Master Mind has a global presence with more than 2000+ Abacus franchise in India and abroad.
                         With more than 18 years of experience in the education industry, Master Mind has shared gigantic
                         success with all its franchises and associates. Our endeavor is to make Master Mind Abacus an
                         enjoyable & memorable experience for our children.</p>
 
-                       <p> Master Mind USP: EXCELLENT COURSE MATERIALS: Master Mind Abacus offers the best course material
+                    <p> Master Mind USP: EXCELLENT COURSE MATERIALS: Master Mind Abacus offers the best course material
                         in the industry, both in terms of content and quality. PLAY AND LEARN CONCEPT: Master Mind
                         Abacus offers a joyful experience for children, through games incorporated in books and through
-                           speed building software.</p>
+                        speed building software.</p>
 
-                      <p>  INNOVATIVE TRAINING TECHNIQUES: The innovative concept of scoreboard and point cards adds to the
+                    <p> INNOVATIVE TRAINING TECHNIQUES: The innovative concept of scoreboard and point cards adds to the
                         delight of teachers by providing ease and convenience of teaching to the students. USE OF
                         TECHNOLOGY: Master Mind Abacus has modernized the learning for students by offering the
                         convenience of Speed Building Software, Virtual Abacus, Online Competition Facility, Student’s
                         Panel, Franchise Panel and Website Services which adds to a cheerful experience of students and
                         facilitates easy operations for the franchise.
-                      </p>
+                    </p>
 
-                      <p>  ECONOMIC: Master Mind Abacus is affordable for all the students as it is cost-effective and
+                    <p> ECONOMIC: Master Mind Abacus is affordable for all the students as it is cost-effective and
                         gives value for money. Franchise Facts: Area Required: 500 to 1000 sq ft Investment: BDT:
                         75,000/= - BDT: 200,000/= <br>
 
@@ -422,20 +423,20 @@
                         Department is responsible to grow our Franchisee from a seed to plant. Post-Franchise Department
                         provides long-term support and constantly updates the franchises about the latest developments,
                         facilitates the franchise to conduct demos and various activities to promote their business.
-                          <br>
+                        <br>
                         Individualized website: The Franchise gets a dynamic website with his own unique domain name.
-                          <br>
-                          <br>
+                        <br>
+                        <br>
                         Franchisee kit: The kit contains Teachers Abacus, Marketing tools like counseling folder, flex,
                         pamphlets, visiting cards, and other promotional material to promote business in the local area.
-                          <br>
-                          <br>
+                        <br>
+                        <br>
                         Training Kit: The Kit contains all the materials for the teachers training.
-                          <br>
-                          <br>
+                        <br>
+                        <br>
                         “A perfect franchise opportunity is waiting for you, contact now to become franchisee”
-                          <br>
-                          <br>
+                        <br>
+                        <br>
                         Mastermind Abacus Bangladesh Head Office: House # 40, Road # 07, Sector # 13, Uttara,
                         Dhaka-1230. Mobile: 01865-598364
 
@@ -475,12 +476,12 @@
     </div>
 </section>
 
-<section class="w3l-price-2" id="news" style="display: none;">
+<section class="w3l-price-2" id="news">
     <div class="price-main py-5">
         <div class="container py-md-3">
             <div class="pricing-style-w3ls row py-md-5">
                 <div class="pricing-chart col-lg-6">
-                    <h3 class="">Latest Posts</h3>
+                    <h3 class="">News Events</h3>
                     <div class="tatest-top mt-md-5 mt-4">
                         <div class="price-box btn-layout bt6">
                             <div class="grid grid-column-2">
@@ -582,6 +583,49 @@
         </div>
     </div>
 </section>
+
+<!--gallery block start-->
+<section class="w3l-price-2" id="gallery">
+    <h3 class="text-center mt-4">Gallery</h3>
+
+    <div class="container py-md-3">
+        <div class="pricing-style-w3ls row">
+
+            <div class="row">
+                <div class="gallery-carousel" style="width: 100px;">
+                    <div class="col-md-3 ">
+                        <img alt="" class="img-fluid" src="assets/images/g9.jpg">
+                    </div>
+                    <div class="col-md-3 ">
+                        <img alt="" class="img-fluid" src="assets/images/g9.jpg">
+                    </div>
+                    <div class="col-md-3 ">
+                        <img alt="" class="img-fluid" src="assets/images/g9.jpg">
+                    </div>
+                    <div class="col-md-3 ">
+                        <img alt="" class="img-fluid" src="assets/images/g9.jpg">
+                    </div>
+                    <div class="col-md-3 mt-3">
+                        <img alt="" class="img-fluid" src="assets/images/g9.jpg">
+                    </div>
+                    <div class="col-md-3 mt-3">
+                        <img alt="" class="img-fluid" src="assets/images/g9.jpg">
+                    </div>
+                    <div class="col-md-3 mt-3">
+                        <img alt="" class="img-fluid" src="assets/images/g9.jpg">
+                    </div>
+                    <div class="col-md-3 mt-3">
+                        <img alt="" class="img-fluid" src="assets/images/g9.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    </div>
+
+</section>
+<!--gallery block end-->
 <!-- grids block 5 -->
 <section class="w3l-footer-29-main">
     <div class="footer-29">
@@ -592,15 +636,19 @@
                     <ul>
                         <li><p><span class="fa fa-map-marker"></span> House # 40, Road # 07, Sector # 13, Uttara</p>
                         </li>
-                        <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> 01865-598364</a></li>
+                        <li><a href="tel:+01865-598364"><span class="fa fa-phone"></span> 01865-598364</a></li>
                         <li><a class="mail" href="mailto:corporate-mail@support.com"><span
                                 class="fa fa-envelope-open-o"></span> info@mastermindabacusbd.com</a></li>
                     </ul>
                     <div class="main-social-footer-29">
-                        <a target="_blank" class="facebook" href="https://www.facebook.com/mastermindabacusbd/"><span class="fa fa-facebook"></span></a>
-                        <a target="_blank" class="twitter" href="https://twitter.com/mastermind_bd?lang=en"><span class="fa fa-twitter"></span></a>
+                        <a target="_blank" class="facebook" href="https://www.facebook.com/mastermindabacusbd/"><span
+                                class="fa fa-facebook"></span></a>
+                        <a target="_blank" class="twitter" href="https://twitter.com/mastermind_bd?lang=en"><span
+                                class="fa fa-twitter"></span></a>
                         <a class="instagram" href="#instagram"><span class="fa fa-instagram"></span></a>
-                        <a target="_blank" class="linkedin" href="https://bd.linkedin.com/company/mastermindabacusbd"><span class="fa fa-linkedin"></span></a>
+                        <a target="_blank" class="linkedin"
+                           href="https://bd.linkedin.com/company/mastermindabacusbd"><span
+                                class="fa fa-linkedin"></span></a>
                     </div>
                 </div>
                 <div class="footer-list-29 footer-2">
@@ -732,6 +780,34 @@
             }
         })
 
+        $('.gallery-carousel').owlCarousel({
+            loop: true,
+            margin: 0,
+            nav: true,
+            responsiveClass: true,
+            autoplay: false,
+            autoplayTimeout: 5000,
+            autoplaySpeed: 1000,
+            autoplayHoverPause: false,
+            responsive: {
+                0: {
+                    items: 3,
+                    nav: false
+                },
+                480: {
+                    items: 3,
+                    nav: false
+                },
+                667: {
+                    items: 3,
+                    nav: true
+                },
+                1000: {
+                    items: 33,
+                    nav: true
+                }
+            }
+        })
         //    lozad
 
         const observer = lozad(); // lazy loads elements with default selector as '.lozad'
